# RAP

./: make.sh
source/: AudioPlayer.cpp  CMakeLists.txt  Config.h.in  ImageLabel.cpp  main.cpp
source/headers/: AudioPlayer.h  Config.h  ImageLabel.h  PlayerWindow.h  TimeSlider.h
source/resources/: resources.qrc
